--- a/css/geral.css
+++ b/css/geral.css
@@ -211,7 +211,7 @@ body {
     grid-column: 1 / -1;
   }
   .grid-section h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .menu {
     margin-top: 0px;
@@ -265,12 +265,19 @@ body {
 }
 
 [data-anime="accordion"] dt::after{
-  content: '⮧';
+  content: '';
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background: url('../img/arrow-red.svg') no-repeat center center;
   margin-left: 10px;
+  transform: rotate(90deg);
+  transition: transform 0.3s;
 }
 
 [data-anime="accordion"] dt.ativo::after{
-  content: '⮥';
+  content: '';
+  transform: rotate(-90deg);
 }
 
 [data-anime="accordion"] dd.ativo{
@@ -319,4 +326,11 @@ body {
   padding: .2rem .5rem;
   font-weight: bold;
   border-radius: 2px;
+}
+
+.arrow-black {
+  background: url('../img/arrow-black.svg') no-repeat center center;
+  display: inline-block;
+  width: 8px;
+  height: 10px;
 }
